--- a/index.html
+++ b/index.html
@@ -14,17 +14,6 @@
 
     <title>Frontend Mentor | QR code component</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
     <!-- external css file -->
     <link rel="stylesheet" href="css/style.css" />
     <!-- outfit font link -->
@@ -37,15 +26,15 @@
   </head>
 
   <body>
-    <div class="card">
+    <main class="card">
       <img src="images/image-qr-code.png" alt="" />
       <h1>Improve your front-end skills by building projects</h1>
       <p>
         Scan the QR code to visit Frontend Mentor and take your coding skills to
         the next level
       </p>
-    </div>
-    <div class="attribution">
+    </main>
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
@@ -53,6 +42,6 @@
       <a href="https://www.frontendmentor.io/profile/MohamedAbdelazem-git"
         >Mohamed Abdelazem</a
       >.
-    </div>
+    </footer>
   </body>
 </html>
